--- a/relatorio2/relatorio2.tex
+++ b/relatorio2/relatorio2.tex
@@ -506,7 +506,7 @@ Nela podemos ver que:
 
 Obs.: Caso a tensão de saída esteja variando muito com a temperatura, reajuste o valor de $R_2$.
 
-    O esquemático está representado na Figura \ref{imagQ25esquematico}. \\ % XXX falta obter essa imagem
+    O esquemático está representado na Figura \ref{imagQ25esquematico}. \\
     As dimensões são do transistores PMOS são $.$ e $.$ e as do NMOS são $.$ e $.$. \\ % TODO preencher valores
     As resistências utilizadas foram $R_1 = 10,88 k \Omega$ e $R_2 = 268,00 k \Omega$. \\
     O gráfico de $V_{REF}$ x Temperatura está representado na Figura \ref{imagQ25tensaoRefTemperatura}. \\
@@ -520,9 +520,9 @@ Obs.: Caso a tensão de saída esteja variando muito com a temperatura, reajuste o
 \textbf{26.} *Desenhe o \emph{layout} da fonte de tensão completa. Utilize o transistor vertical PRIMLAB/VERT10 da biblioteca. Ajuste o comprimento de $R_2$ no \emph{layout} para que o coeficiente de temperatura do circuito esxtraído se mantenha abaixo de 50 ppm/ºC. \\
 Obs.: o transistor bipolar extraído vem com o parâmetro Area. Apague este parâmetro senão ficará errado.
 
-    O \emph{layout} da fonte de tensão complet está representado na Figura \ref{imag26layoutFonte}. % XXX falta obter essa imagem
+    O \emph{layout} da fonte de tensão complet está representado na Figura \ref{imagQ26layoutFonte}.
 
-    \img{\emph{Layout} da fonte de tensão completa}{imag26layoutFonte}{imag26layoutFonte}
+    \img{\emph{Layout} da fonte de tensão completa}{imagQ26layoutFonte}{imagQ26layoutFonte}
 
 
 \textbf{27.} *Adicione ao \emph{layout Pads} de $V_{DD}$ e GND. Passar o DRC para verificar se tudo está correto. Quais são as dimensões do circuito com os \emph{Pads}? Apresente o \emph{layout} do circuito e o gráfico $V_REF$ x Temperatura para valores de $V_{DD}$ de 2,0 V, 2,5 V e 3,0V.
