Questão 'parseadas' do relatorio 3

--- a/relatorio3/preambulo.tex
+++ b/relatorio3/preambulo.tex
@@ -75,6 +75,21 @@
 \end{figure}
 }
 
+\newcommand{\fref}[1]{
+\textbf{Figura \ref{#1}}
+}
+
+\newcommand{\cref}[1]{
+\textbf{Código fonte \ref{#1}}
+}
+
+\newcommand{\tref}[1]{
+\textbf{Tabela \ref{#1}}
+}
+
+\newcommand{\eref}[1]{
+\textbf{Equação (\ref{#1})}
+}
 
 \tolerance=10000
 
